Improved image generation and deselection opacity. Fixed evo hide button not showing correct state

--- a/src/root.css
+++ b/src/root.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+    .text-shadow {
+        text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    }
+}
+
 @layer components {
     .icon-selected {
         @apply border-2 border-red-600 rounded-sm opacity-100
